--- a/report.html
+++ b/report.html
@@ -1585,22 +1585,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[0,0,10401,4],[],[[5,0,1,0,[],[0,10384,4,6],[]]],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,47439],[],[[4,0,1,0,[],[1,17415,7064],[]],[5,0,1,0,[],[1,24487,5770],[]],[6,0,1,0,[],[1,30268,5714],[]],[7,0,1,0,[],[1,35992,5655],[]],[8,0,1,0,[],[1,41654,5683],[]]],[],[5,5,5,5]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Rf Test Cases","*C:\\Users\\oliver.uhlar\\Desktop\\Projects\\postman_wamp\\rf_test_cases.robot","*rf_test_cases.robot","*Suite setup failed:\nElement with locator 'None' not found.","*Test POST","*Parent suite setup failed:\nElement with locator 'None' not found."]);
+window.output["strings"] = window.output["strings"].concat(["*","*Rf Test Cases","*C:\\Users\\oliver.uhlar\\Desktop\\Projects\\postman_wamp\\rf_test_cases.robot","*rf_test_cases.robot","*Test GET","*Test POST","*Test GET after POST","*Test PUT","*Test GET after PUT"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:00","fail":1,"label":"Critical Tests","pass":0},{"elapsed":"00:00:00","fail":1,"label":"All Tests","pass":0}],[],[{"elapsed":"00:00:10","fail":1,"id":"s1","label":"Rf Test Cases","name":"Rf Test Cases","pass":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:30","fail":0,"label":"Critical Tests","pass":5},{"elapsed":"00:00:30","fail":0,"label":"All Tests","pass":5}],[],[{"elapsed":"00:00:47","fail":0,"id":"s1","label":"Rf Test Cases","name":"Rf Test Cases","pass":5}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1607460400352;
+window.output["baseMillis"] = 1607506325482;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 10433;
+window.output["generated"] = 47465;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
