--- a/report.html
+++ b/report.html
@@ -1585,22 +1585,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,47311],[],[[4,0,1,0,[],[1,17233,7064],[]],[5,0,1,0,[],[1,24313,5704],[]],[6,0,1,0,[],[1,30029,5705],[]],[7,0,1,0,[],[1,35747,5710],[]],[8,0,1,0,[],[1,41472,5726],[]]],[],[5,5,5,5]];
+window.output["suite"] = [1,2,3,0,[],[1,0,46002],[],[[4,0,1,0,[],[1,18019,5233],[]],[5,0,1,0,[],[1,23256,4112],[]],[6,0,1,0,[],[1,27370,3445],[]],[7,0,1,0,[],[1,30819,4131],[]],[8,0,1,0,[],[1,34952,3426],[]],[9,0,1,0,[],[1,38382,4061],[]],[10,0,1,0,[],[1,42448,3450],[]]],[],[7,7,7,7]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Rf Test Cases","*C:\\Users\\oliver.uhlar\\Desktop\\Projects\\postman_wamp\\rf_test_cases.robot","*rf_test_cases.robot","*Test GET","*Test POST","*Test GET after POST","*Test PUT","*Test GET after PUT"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Rf Test Cases","*C:\\Users\\oliver.uhlar\\Desktop\\Projects\\postman_wamp\\rf_test_cases.robot","*rf_test_cases.robot","*Test GET","*Test POST","*Test GET after POST","*Test PUT","*Test GET after PUT","*Test DELETE","*Test GET after DELETE"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:30","fail":0,"label":"Critical Tests","pass":5},{"elapsed":"00:00:30","fail":0,"label":"All Tests","pass":5}],[],[{"elapsed":"00:00:47","fail":0,"id":"s1","label":"Rf Test Cases","name":"Rf Test Cases","pass":5}]];
+window.output["stats"] = [[{"elapsed":"00:00:28","fail":0,"label":"Critical Tests","pass":7},{"elapsed":"00:00:28","fail":0,"label":"All Tests","pass":7}],[],[{"elapsed":"00:00:46","fail":0,"id":"s1","label":"Rf Test Cases","name":"Rf Test Cases","pass":7}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1607507036962;
+window.output["baseMillis"] = 1607593333284;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 47359;
+window.output["generated"] = 46041;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
